<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/location"
        android:title="@string/location"
        android:icon="@drawable/baseline_location_on_24"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@+id/change_language"
            android:title="@string/change_language"
            android:icon="@drawable/baseline_language_24"
            app:showAsAction="collapseActionView"/>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/log_out"
            app:showAsAction="collapseActionView" />
    </group>
</menu>