<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        tools:context=".view.ui.DetailStoryActivity">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:transitionName="profile"
            android:contentDescription="@string/this_is_avatar"
            android:src="@drawable/user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:transitionName="username"
            android:fontFamily="@font/poppinsbold"
            android:text="@string/username"
            app:layout_constraintStart_toEndOf="@+id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

        <TextView
            android:id="@+id/tv_date_added"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="date"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/tv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:transitionName="description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_favorite" />

        <ImageView
            android:id="@+id/iv_image_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="story_image"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/this_is_image_story"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_added"
            tools:srcCompat="@drawable/image_placeholder" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/iv_image_story"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_story"
            app:srcCompat="@drawable/baseline_favorite_border_24" />

        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/iv_favorite"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_story"
            app:srcCompat="@drawable/baseline_arrow_outward_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>