<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/this_is_avatar"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/username"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="4"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <ImageView
            android:id="@+id/iv_image_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="@+id/card_view"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            tools:srcCompat="@drawable/image_placeholder" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:srcCompat="@drawable/baseline_favorite_border_24" />

    <ImageView
        android:id="@+id/iv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/iv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        app:srcCompat="@drawable/baseline_arrow_outward_24" />

    <TextView
        android:id="@+id/tvDateAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/iv_favorite"
        app:layout_constraintTop_toBottomOf="@+id/iv_favorite" />

</androidx.constraintlayout.widget.ConstraintLayout>